Test swagger files
